*   Email: info@wordrider.net (issue tracker is preferred)   *
**************************************************************
Thanks to all individuals who reported bugs.

Legend :
Added - indicates new functionality or new part of distribution
Changed - indicates a change in using/behavior FreeRapid Downloader
Fixed - indicates a bug fix

16th November 2010 - FreeRapid Downloader 0.85 build 555
  Changed: UA translation is now available
  Fixed: plugin updates glitch

14th November 2010 - FreeRapid Downloader 0.85
  Fixed : JDK 6 bug where the built-in WBMP reader tries to read ICO files and fails
  Fixed : OpenSearchDescription files require namespace http://a9.com/-/spec/opensearch/1.1/
  Note: support for other translations will come later as a separate download

31st October 2010 - FreeRapid Downloader 0.85 Alpha 4
  Added : Support for direct downloads (enable this feature in Preferences)
  Added : Support for container files (DLC, CCF, RSDF, etc...)
  Added : GUI - search text field in toolbar (supports OpenSearchDescription file format) - see
          https://addons.mozilla.org/en-US/firefox/search-engines/ and http://www.opensearch.org/Home for more details                 
  Added : A few new user options:
            - Start downloads from decrypters and folders automatically
            - Bring application to the top when clipboard monitoring detects links
  Added : Plugin API
           - Base URL is automatically parsed from fileURL during init
           - Support for unlimited cryptography
  Added : New LookAndFeel skins - Substance Office Black 2007 and Substance Mariner
  Added : Downgrade of plugin is made automatically if necessary
  Added : New internal property removeNotSupportedPlugins to remove not supported plugins automatically (default value is false)
  Added : New internal property tableColumnsResize - behavior of resizing table columns, can be set in startup.properties file
  Changed : Upgraded Substance L&F to version 6.1 Final