@@ -1,4 +1,4 @@
-﻿Application.id = FRD
+Application.id = FRD
 Application.version = 0.85
 Application.title = FreeRapid Downloader ${Application.version}
 Application.vendor = Vity
